samples/_failures_safe/1761415199_d9ba07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cce28f6c.c: In function ‘main’:
./samples/SAFE/__tmp_cce28f6c.c:134:9: error: expected declaration or statement at end of input
  134 |         free(compressed.data);
      |         ^~~~
./samples/SAFE/__tmp_cce28f6c.c:134:9: error: expected declaration or statement at end of input
